objects/APT__c.object
<CustomObject>
    <fields>
        <fullName>APT_Type__c</fullName>
        <label>APT Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Meeting</fullName>
                </value>
                <value>
                    <fullName>DPS Meeting</fullName>
                </value>
                <value>
                    <fullName>RFP - Finalist Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_APT_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date APT Requested</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Data Informatics</fullName>
                </value>
                <value>
                    <fullName>Medical Management</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Relationship field that ties Opportunities to APT child records</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>APT</relationshipLabel>
        <relationshipName>APT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>APT is used by the Advanced Presentation Team</description>
    <label>APT</label>
    <nameField>
        <displayFormat>APT-{0000}</displayFormat>
        <label>APT Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APT</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>